Fix server setup

--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script type="text/javascript" src="http://localhost/jquery-3.2.1.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="http://localhost/slideshow.css" />
+		<script type="text/javascript" src="/jquery-3.2.1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/slideshow.css" />
 	</head>
 	<body>
 
@@ -30,6 +30,6 @@
 			<span class="moredot" onclick="changeRange(1)"></span>
 		</div>
 
-		<script src="http://localhost/slideshow.js" type="text/javascript"></script>
+		<script src="/slideshow.js" type="text/javascript"></script>
 	</body>
 </html>
